--- a/I4SWD/GoFObserver/GoFObserverGeneric/GoFObserverGeneric.csproj
+++ b/I4SWD/GoFObserver/GoFObserverGeneric/GoFObserverGeneric.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{234A6BC8-D57F-4848-ADF2-44A4F6D0206D}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{48025E26-135E-47C7-ADC0-51228527D935}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>GoFObserver</RootNamespace>
-    <AssemblyName>GoFObserver</AssemblyName>
+    <RootNamespace>GoFObserverGeneric</RootNamespace>
+    <AssemblyName>GoFObserverGeneric</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,20 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Portfolio.cs" />
-    <Compile Include="PortfolioDisplay.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="IObserver.cs" />
+    <Compile Include="Subject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Stocks.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\GoFObserverDLL\GoFObserverDLL.csproj">
-      <Project>{2646b5da-3bab-48b6-b96c-37730fbbf206}</Project>
-      <Name>GoFObserverDLL</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
