--- a/I4SWD/Factory/CompressionStocking/CompressionStocking.csproj
+++ b/I4SWD/Factory/CompressionStocking/CompressionStocking.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CompressionStocking</RootNamespace>
     <AssemblyName>CompressionStocking</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -40,27 +43,28 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CompessionCtrl.cs" />
-    <Compile Include="Factory\CompressionA.cs" />
-    <Compile Include="Factory\CompressionFactory.cs" />
-    <Compile Include="ICompressionComplete.cs" />
-    <Compile Include="Notification\CompressionStoppetMessage.cs" />
-    <Compile Include="Notification\CompStartedMsg.cs" />
-    <Compile Include="Notification\INotify.cs" />
-    <Compile Include="IPump.cs" />
-    <Compile Include="IVibrator.cs" />
-    <Compile Include="Laces\ILaceTightener.cs" />
-    <Compile Include="Laces\LaceTightener.cs" />
-    <Compile Include="Lights\Greenlight.cs" />
-    <Compile Include="Lights\ILight.cs" />
-    <Compile Include="Lights\Redlight.cs" />
-    <Compile Include="Pump.cs" />
-    <Compile Include="StockingCtrl.cs" />
-    <Compile Include="ICompressionCtrl.cs" />
+    <Compile Include="Devices\Compression\LaceTighteningDevice.cs" />
+    <Compile Include="Factory\CompressionFactA.cs" />
+    <Compile Include="Factory\CompressionFactB.cs" />
+    <Compile Include="Factory\ICompressionFactory.cs" />
+    <Compile Include="Factory\Ioutputfactory.cs" />
+    <Compile Include="Factory\OutputfactoryA.cs" />
+    <Compile Include="Mechanisms\Compression\AirCompressionMechanism.cs" />
+    <Compile Include="BusinessLogic\IButtonHandler.cs" />
+    <Compile Include="BusinessLogic\ICompressionEventListener.cs" />
+    <Compile Include="Devices\UserInterface\ITwoStateUnit.cs" />
+    <Compile Include="Devices\Compression\IPump.cs" />
+    <Compile Include="Devices\Compression\ILaceTighteningDevice.cs" />
+    <Compile Include="Mechanisms\Compression\CompressionMechanism.cs" />
+    <Compile Include="Mechanisms\UserInterface\IUserOutput.cs" />
+    <Compile Include="Devices\UserInterface\LED.cs" />
+    <Compile Include="Devices\Compression\Pump.cs" />
+    <Compile Include="BusinessLogic\StockingCtrl.cs" />
+    <Compile Include="Mechanisms\Compression\ICompressionMechanism.cs" />
+    <Compile Include="Mechanisms\Compression\LaceCompressionMechanism.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Timers\ITimerCtrl.cs" />
-    <Compile Include="Timers\TimerCtrl.cs" />
-    <Compile Include="VibratorA.cs" />
+    <Compile Include="Mechanisms\UserInterface\UserOutput.cs" />
+    <Compile Include="Devices\UserInterface\Vibrator.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
