--- a/I4SWD/Factory/CompressionStockingApplication/CompressionStockingApplication.csproj
+++ b/I4SWD/Factory/CompressionStockingApplication/CompressionStockingApplication.csproj
@@ -1,19 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D98B6B73-33F2-45DE-8C50-6B3CA3F02497}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{FF29B0C6-6647-4E4A-ABDE-2C0139E22580}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CompressionStocking</RootNamespace>
-    <AssemblyName>CompressionStocking</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <RootNamespace>CompressionStockingApplication</RootNamespace>
+    <AssemblyName>CompressionStockingApplication</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -21,14 +24,17 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
+    <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -40,29 +46,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CompessionCtrl.cs" />
-    <Compile Include="Factory\CompressionA.cs" />
-    <Compile Include="Factory\CompressionFactory.cs" />
-    <Compile Include="ICompressionComplete.cs" />
-    <Compile Include="Notification\CompressionStoppetMessage.cs" />
-    <Compile Include="Notification\CompStartedMsg.cs" />
-    <Compile Include="Notification\INotify.cs" />
-    <Compile Include="IPump.cs" />
-    <Compile Include="IVibrator.cs" />
-    <Compile Include="Laces\ILaceTightener.cs" />
-    <Compile Include="Laces\LaceTightener.cs" />
-    <Compile Include="Lights\Greenlight.cs" />
-    <Compile Include="Lights\ILight.cs" />
-    <Compile Include="Lights\Redlight.cs" />
-    <Compile Include="Pump.cs" />
-    <Compile Include="StockingCtrl.cs" />
-    <Compile Include="ICompressionCtrl.cs" />
+    <Compile Include="CompressionStockingApplication.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Timers\ITimerCtrl.cs" />
-    <Compile Include="Timers\TimerCtrl.cs" />
-    <Compile Include="VibratorA.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\CompressionStocking\CompressionStocking.csproj">
+      <Project>{D98B6B73-33F2-45DE-8C50-6B3CA3F02497}</Project>
+      <Name>CompressionStocking</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
